--- a/detekcia_komunit.ipynb
+++ b/detekcia_komunit.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b96dac7f",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,11 @@
     "import networkx as nx\n",
     "import community.community_louvain as community_louvain\n",
     "import funkcie as fn\n",
-    "fn.setup_directories()"
+    "fn.setup_directories()\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import collections"
    ]
   },
   {
@@ -25,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "fad5bbca",
    "metadata": {},
    "outputs": [
@@ -35,8 +39,7 @@
      "text": [
       "Načítavam dáta z: facebook_combined.txt\n",
       "-> Uzlov: 4039\n",
-      "-> Hrán: 88234\n",
-      "Počítam layout (môže to chvíľu trvať)...\n"
+      "-> Hrán: 88234\n"
      ]
     }
    ],
@@ -44,86 +47,6 @@
     "G = fn.load_data(\"facebook_combined.txt\")\n",
     "pos = nx.spring_layout(G, seed=42)\n",
     "fn.draw_graph_raw(G, pos)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c1c05428",
-   "metadata": {},
-   "source": [
-    "#### VYHODNOTENIE"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "44b16544",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Model</th>\n",
-       "      <th>Modularita</th>\n",
-       "      <th>Počet komunít</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Louvain</td>\n",
-       "      <td>0.8349</td>\n",
-       "      <td>15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>LPA</td>\n",
-       "      <td>0.7368</td>\n",
-       "      <td>44</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     Model  Modularita  Počet komunít\n",
-       "0  Louvain      0.8349             15\n",
-       "1      LPA      0.7368             44"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Zozbieranie výsledkov do zoznamu\n",
-    "results = [\n",
-    "    {\"Model\": \"Louvain\", \"Modularita\": round(mod_louvain, 4), \"Počet komunít\": count_louvain},\n",
-    "    {\"Model\": \"LPA\",     \"Modularita\": round(mod_lpa, 4),     \"Počet komunít\": count_lpa}\n",
-    "]\n",
-    "\n",
-    "# Uloženie a zobrazenie tabuľky\n",
-    "df_results = fn.save_results_table(results)\n",
-    "df_results"
    ]
   },
   {
@@ -136,28 +59,147 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "fc9b726a",
+   "execution_count": 3,
+   "id": "cf91c40d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ==========================================\n",
-    "# EXPERIMENT B: Hĺbková analýza víťazného modelu (Louvain)\n",
-    "# ==========================================\n",
-    "import matplotlib.pyplot as plt\n",
-    "import pandas as pd\n",
-    "import collections\n",
-    "import community.community_louvain as community_louvain\n",
-    "import funkcie as fn \n",
+    "# 1. Definícia rozsahu resolution\n",
+    "resolutions = np.arange(0, 2.1, 0.1)\n",
     "\n",
-    "# 1. Načítanie najlepšieho modelu (z Experimentu A)\n",
-    "# Použijeme resolution, ktoré vyhralo v predchádzajúcom kroku\n",
+    "results_exp_a = []\n",
+    "best_modularity = -1\n",
+    "best_resolution = 1.0\n",
+    "best_partition = None\n",
+    "\n",
+    "# --- VÝPOČTY ---\n",
+    "for r in resolutions:\n",
+    "    r = round(r, 1)\n",
+    "    \n",
+    "    try:\n",
+    "        partition = community_louvain.best_partition(G, resolution=r, random_state=42)\n",
+    "        mod = community_louvain.modularity(partition, G)\n",
+    "        n_comms = len(set(partition.values()))\n",
+    "        \n",
+    "        results_exp_a.append({\n",
+    "            \"Resolution\": r,\n",
+    "            \"Modularita\": mod,\n",
+    "            \"Počet komunít\": n_comms\n",
+    "        })\n",
+    "        \n",
+    "        if mod > best_modularity:\n",
+    "            best_modularity = mod\n",
+    "            best_resolution = r\n",
+    "            best_partition = partition\n",
+    "            \n",
+    "    except Exception as e:\n",
+    "        pass\n",
+    "\n",
+    "df_a = pd.DataFrame(results_exp_a)\n",
+    "\n",
+    "# -------------------------------------------------------\n",
+    "# 2. Uloženie GRAFU\n",
+    "# -------------------------------------------------------\n",
+    "fig, ax1 = plt.subplots(figsize=(12, 6))\n",
+    "\n",
+    "color = 'tab:blue'\n",
+    "ax1.set_xlabel('Resolution Parameter')\n",
+    "ax1.set_ylabel('Modularita', color=color, fontweight='bold')\n",
+    "ax1.plot(df_a['Resolution'], df_a['Modularita'], color=color, marker='o', markersize=4, linewidth=2)\n",
+    "ax1.tick_params(axis='y', labelcolor=color)\n",
+    "ax1.grid(True, alpha=0.3)\n",
+    "\n",
+    "ax2 = ax1.twinx()  \n",
+    "color = 'tab:red'\n",
+    "ax2.set_ylabel('Počet komunít', color=color, fontweight='bold')\n",
+    "ax2.plot(df_a['Resolution'], df_a['Počet komunít'], color=color, marker='s', markersize=4, linestyle='--', linewidth=2)\n",
+    "ax2.tick_params(axis='y', labelcolor=color)\n",
+    "\n",
+    "ax1.set_xticks(np.arange(0, 2.1, 0.1))\n",
+    "plt.title(f\"Experiment A: Vplyv Resolution ({resolutions[0]} - {resolutions[-1]})\")\n",
+    "plt.savefig(\"img/experiment_A_resolution_fine.png\", dpi=300, bbox_inches='tight')\n",
+    "plt.close()\n",
+    "\n",
+    "# -------------------------------------------------------\n",
+    "# 3. Uloženie TABUĽKY výsledkov do PNG\n",
+    "# -------------------------------------------------------\n",
+    "# Príprava formátovaných dát pre tabuľku (textové reťazce)\n",
+    "# Týmto vynútime, že int bude int a float bude float s presným počtom desatinných miest\n",
+    "cell_text = []\n",
+    "for index, row in df_a.iterrows():\n",
+    "    cell_text.append([\n",
+    "        f\"{row['Resolution']:.1f}\",\n",
+    "        f\"{row['Modularita']:.4f}\",\n",
+    "        f\"{int(row['Počet komunít'])}\"\n",
+    "    ])\n",
+    "\n",
+    "# Nastavenie výšky obrázka\n",
+    "num_rows = len(df_a)\n",
+    "# Pridáme trochu viac miesta navrch kvôli nadpisu\n",
+    "fig_height = (num_rows * 0.3) + 1.0 \n",
+    "\n",
+    "fig_tbl, ax_tbl = plt.subplots(figsize=(6, fig_height))\n",
+    "ax_tbl.axis('tight')\n",
+    "ax_tbl.axis('off')\n",
+    "\n",
+    "# Vytvorenie tabuľky\n",
+    "table = ax_tbl.table(cellText=cell_text,\n",
+    "                     colLabels=[\"Resolution\", \"Modularita\", \"Počet komunít\"],\n",
+    "                     cellLoc='center',\n",
+    "                     loc='center')\n",
+    "\n",
+    "table.auto_set_font_size(False)\n",
+    "table.set_fontsize(10)\n",
+    "table.scale(1, 1.5)\n",
+    "\n",
+    "# Nastavenie nadpisu\n",
+    "plt.title(\"Detailné výsledky Experimentu A\", y=1.0, pad=20, fontsize=12, fontweight='bold')\n",
+    "\n",
+    "plt.savefig(\"img/experiment_A_tabulka.png\", dpi=300, bbox_inches='tight')\n",
+    "plt.close()\n",
+    "\n",
+    "# -------------------------------------------------------\n",
+    "# 4. Uloženie vizualizácie\n",
+    "# -------------------------------------------------------\n",
+    "fn.draw_communities(G, best_partition, pos, \n",
+    "                   f\"Najlepší model (Louvain res={best_resolution})\", \n",
+    "                   \"img/best_louvain_model.png\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e0998f2",
+   "metadata": {},
+   "source": [
+    "#### EXPERIMENT B: Analýza veľkosti komunít"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "fc9b726a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Používam optimalizované resolution z Exp A: 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1. Načítanie modelu z Experimentu A\n",
+    "# Použijeme premennú 'best_resolution', ktorú vypočítal predchádzajúci kód.\n",
+    "# Ak by náhodou neexistovala, nastavíme 1.0 ako fallback.\n",
     "try:\n",
     "    final_res = best_resolution\n",
+    "    print(f\"Používam optimalizované resolution z Exp A: {final_res}\")\n",
     "except NameError:\n",
     "    final_res = 1.0\n",
+    "    print(\"Premenná z Exp A chýba, používam default resolution=1.0\")\n",
     "\n",
-    "# Výpočet finálneho rozdelenia pre Louvain\n",
+    "# Výpočet rozdelenia (Louvain)\n",
     "final_partition = community_louvain.best_partition(G, resolution=final_res, random_state=42)\n",
     "\n",
     "# Získanie veľkostí a zoradenie od najväčšej po najmenšiu\n",
@@ -165,21 +207,18 @@
     "sorted_sizes = sorted(community_counts.values(), reverse=True)\n",
     "\n",
     "# -------------------------------------------------------\n",
-    "# 2. Uloženie GRAFU (Zoradené veľkosti - \"Rank-Size Plot\")\n",
+    "# 2. Uloženie GRAFU\n",
     "# -------------------------------------------------------\n",
     "plt.figure(figsize=(10, 6))\n",
     "\n",
-    "# Vytvoríme x-ovú os ako poradie (1, 2, 3...)\n",
     "ranks = range(1, len(sorted_sizes) + 1)\n",
-    "\n",
-    "# Vykreslenie stĺpcového grafu\n",
-    "bars = plt.bar(ranks, sorted_sizes, color='tab:green', edgecolor='black', alpha=0.75)\n",
+    "plt.bar(ranks, sorted_sizes, color='tab:green', edgecolor='black', alpha=0.75)\n",
     "\n",
     "plt.title(f\"Veľkosť komunít zoradená podľa poradia (Louvain, res={final_res})\")\n",
-    "plt.xlabel(\"Poradie komunity (od najväčšej po najmenšiu)\")\n",
-    "plt.ylabel(\"Počet členov (uzlov)\")\n",
+    "plt.xlabel(\"Poradie komunity (Rank)\")\n",
+    "plt.ylabel(\"Počet členov ($N_c$)\")\n",
     "\n",
-    "# Nastavenie X-ovej osi\n",
+    "# Úprava osi X pre lepšiu čitateľnosť\n",
     "if len(ranks) <= 20:\n",
     "    plt.xticks(ranks)\n",
     "else:\n",
@@ -187,17 +226,16 @@
     "\n",
     "plt.grid(axis='y', linestyle='--', alpha=0.5)\n",
     "\n",
-    "# Pridanie hodnoty nad prvý (najväčší) stĺpec pre efekt\n",
+    "# Pridanie hodnoty nad prvý stĺpec\n",
     "plt.text(ranks[0], sorted_sizes[0], f\" {sorted_sizes[0]}\", ha='center', va='bottom', fontweight='bold')\n",
     "\n",
-    "# Uloženie s názvom Experiment B\n",
     "plt.savefig(\"img/experiment_B_sizes_sorted.png\", dpi=300, bbox_inches='tight')\n",
     "plt.close()\n",
     "\n",
     "# -------------------------------------------------------\n",
     "# 3. Uloženie TABUĽKY \"Top 5 Komunít\"\n",
     "# -------------------------------------------------------\n",
-    "# Pripravíme dáta pre Top 5\n",
+    "# Príprava dát: Zoradíme komunity aj s ich ID\n",
     "sorted_comms_with_ids = sorted(community_counts.items(), key=lambda x: x[1], reverse=True)\n",
     "\n",
     "top_5_data = []\n",
@@ -206,20 +244,110 @@
     "for i, (comm_id, size) in enumerate(sorted_comms_with_ids[:5]):\n",
     "    share = (size / total_nodes) * 100\n",
     "    top_5_data.append([\n",
-    "        str(i + 1),               # Poradie\n",
-    "        str(comm_id),             # ID Komunity\n",
-    "        str(size),                # Počet členov\n",
-    "        f\"{share:.1f} %\"          # Podiel na sieti\n",
+    "        str(i + 1),               # Rank\n",
+    "        str(comm_id),             # ID\n",
+    "        str(size),                # Size\n",
+    "        f\"{share:.1f} %\"          # Share\n",
     "    ])\n",
     "\n",
-    "# Vytvorenie obrázka pre tabuľku\n",
+    "# Vytvorenie tabuľky\n",
     "fig_tbl, ax_tbl = plt.subplots(figsize=(6, 2.5))\n",
     "ax_tbl.axis('tight')\n",
     "ax_tbl.axis('off')\n",
     "\n",
-    "columns = [\"Poradie\", \"ID Komunity\", \"Počet členov\", \"Podiel na sieti\"]\n",
+    "columns = [\"Rank\", \"Cluster ID\", \"Veľkosť ($N_c$)\", \"Podiel na sieti\"]\n",
     "\n",
     "table = ax_tbl.table(cellText=top_5_data,\n",
+    "                     colLabels=columns,\n",
+    "                     cellLoc='center',\n",
+    "                     loc='center')\n",
+    "\n",
+    "table.auto_set_font_size(False)\n",
+    "table.set_fontsize(11)\n",
+    "table.scale(1, 1.5)\n",
+    "\n",
+    "plt.title(\"Top 5 najväčších komunít\", y=1.0, pad=20, fontsize=12, fontweight='bold')\n",
+    "plt.savefig(\"img/experiment_B_top5.png\", dpi=300, bbox_inches='tight')\n",
+    "plt.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2a2cd699",
+   "metadata": {},
+   "source": [
+    "#### EXPERIMENT C: Identifikácia centrálnych uzlov"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "8bfd6f7d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1. Využitie premenných z Exp B\n",
+    "# Ak by premenné neexistovali, nastavíme default\n",
+    "try:\n",
+    "    final_res = best_resolution\n",
+    "except NameError:\n",
+    "    final_res = 1.0\n",
+    "\n",
+    "# Prepočet modelu\n",
+    "final_partition = community_louvain.best_partition(G, resolution=final_res, random_state=42)\n",
+    "\n",
+    "# Zoradenie komunít podľa veľkosti\n",
+    "community_counts = collections.Counter(final_partition.values())\n",
+    "sorted_comms = sorted(community_counts.items(), key=lambda x: x[1], reverse=True)\n",
+    "\n",
+    "# 2. Analýza Hubov pre Top 5 komunít\n",
+    "hub_data = []\n",
+    "\n",
+    "for i, (comm_id, size) in enumerate(sorted_comms[:5]):\n",
+    "    # A. Vytvoríme pod-graf len pre túto komunitu\n",
+    "    nodes_in_comm = [n for n, c in final_partition.items() if c == comm_id]\n",
+    "    subgraph = G.subgraph(nodes_in_comm)\n",
+    "    \n",
+    "    # B. Nájdeme uzol s najvyšším stupňom vnútri komunity\n",
+    "    degrees = dict(subgraph.degree())\n",
+    "    top_node = max(degrees, key=degrees.get)\n",
+    "    internal_degree = degrees[top_node]\n",
+    "    \n",
+    "    # C. Výpočet pokrytia (%)\n",
+    "    coverage = (internal_degree / (size - 1)) * 100 if size > 1 else 100\n",
+    "    \n",
+    "    hub_data.append([\n",
+    "        str(i + 1),                   # Rank\n",
+    "        str(comm_id),                 # ID\n",
+    "        str(size),                    # Veľkosť\n",
+    "        str(top_node),                # Hub ID\n",
+    "        str(internal_degree),         # Stupeň\n",
+    "        f\"{coverage:.1f} %\"           # Pokrytie\n",
+    "    ])\n",
+    "\n",
+    "# 3. Vytvorenie tabuľky\n",
+    "# Skrátené názvy stĺpcov aby sa zmestili\n",
+    "columns = [\n",
+    "    \"Rank\", \n",
+    "    \"Komunita ID\", \n",
+    "    \"Veľkosť\", \n",
+    "    \"Hub ID\", \n",
+    "    \"Max. Stupeň\", \n",
+    "    \"Pokrytie\"\n",
+    "]\n",
+    "\n",
+    "df_hub = pd.DataFrame(hub_data, columns=columns)\n",
+    "\n",
+    "# Nastavenie výšky obrázka\n",
+    "num_rows = len(df_hub)\n",
+    "fig_height = (num_rows * 0.3) + 1.0 \n",
+    "\n",
+    "fig_tbl, ax_tbl = plt.subplots(figsize=(8, fig_height)) # Mierna úprava šírky\n",
+    "ax_tbl.axis('tight')\n",
+    "ax_tbl.axis('off')\n",
+    "\n",
+    "# Vykreslenie tabuľky\n",
+    "table = ax_tbl.table(cellText=df_hub.values,\n",
     "                     colLabels=columns,\n",
     "                     cellLoc='center',\n",
     "                     loc='center')\n",
@@ -228,10 +356,11 @@
     "table.set_fontsize(10)\n",
     "table.scale(1, 1.5)\n",
     "\n",
-    "plt.title(\"Top 5 najväčších komunít (Louvain)\", y=1.0, pad=20, fontsize=12, fontweight='bold')\n",
+    "# Nadpis\n",
+    "plt.title(f\"Analýza centrálnych uzlov (Louvain res={final_res})\", \n",
+    "          y=1.0, pad=20, fontsize=12, fontweight='bold')\n",
     "\n",
-    "# Uloženie s názvom Experiment B\n",
-    "plt.savefig(\"img/experiment_B_top5.png\", dpi=300, bbox_inches='tight')\n",
+    "plt.savefig(\"img/experiment_C_hubs.png\", dpi=300, bbox_inches='tight')\n",
     "plt.close()"
    ]
   }
