--- a/detekcia_komunit.ipynb
+++ b/detekcia_komunit.ipynb
@@ -281,13 +281,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "8bfd6f7d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 1. Využitie premenných z Exp B\n",
-    "# Ak by premenné neexistovali, nastavíme default\n",
+    "# 1. Príprava dát\n",
     "try:\n",
     "    final_res = best_resolution\n",
     "except NameError:\n",
@@ -296,14 +295,14 @@
     "# Prepočet modelu\n",
     "final_partition = community_louvain.best_partition(G, resolution=final_res, random_state=42)\n",
     "\n",
-    "# Zoradenie komunít podľa veľkosti\n",
+    "# Zoradenie komunít podľa veľkosti (VŠETKY)\n",
     "community_counts = collections.Counter(final_partition.values())\n",
     "sorted_comms = sorted(community_counts.items(), key=lambda x: x[1], reverse=True)\n",
     "\n",
-    "# 2. Analýza Hubov pre Top 5 komunít\n",
+    "# 2. Analýza Hubov pre VŠETKY komunity\n",
     "hub_data = []\n",
     "\n",
-    "for i, (comm_id, size) in enumerate(sorted_comms[:5]):\n",
+    "for i, (comm_id, size) in enumerate(sorted_comms):\n",
     "    # A. Vytvoríme pod-graf len pre túto komunitu\n",
     "    nodes_in_comm = [n for n, c in final_partition.items() if c == comm_id]\n",
     "    subgraph = G.subgraph(nodes_in_comm)\n",
@@ -318,31 +317,28 @@
     "    \n",
     "    hub_data.append([\n",
     "        str(i + 1),                   # Rank\n",
-    "        str(comm_id),                 # ID\n",
-    "        str(size),                    # Veľkosť\n",
-    "        str(top_node),                # Hub ID\n",
-    "        str(internal_degree),         # Stupeň\n",
+    "        str(size),                    # Počet uzlov\n",
+    "        str(internal_degree),         # Počet pokrytých uzlov\n",
     "        f\"{coverage:.1f} %\"           # Pokrytie\n",
     "    ])\n",
     "\n",
     "# 3. Vytvorenie tabuľky\n",
-    "# Skrátené názvy stĺpcov aby sa zmestili\n",
+    "# Skrátený názov stĺpca pre lepšiu čitateľnosť\n",
     "columns = [\n",
     "    \"Rank\", \n",
-    "    \"Komunita ID\", \n",
-    "    \"Veľkosť\", \n",
-    "    \"Hub ID\", \n",
-    "    \"Max. Stupeň\", \n",
+    "    \"Počet uzlov\", \n",
+    "    \"Pokryté uzly\", \n",
     "    \"Pokrytie\"\n",
     "]\n",
     "\n",
     "df_hub = pd.DataFrame(hub_data, columns=columns)\n",
     "\n",
-    "# Nastavenie výšky obrázka\n",
+    "# Výpočet dynamickej výšky obrázka\n",
     "num_rows = len(df_hub)\n",
-    "fig_height = (num_rows * 0.3) + 1.0 \n",
+    "fig_height = (num_rows * 0.35) + 1.2 \n",
     "\n",
-    "fig_tbl, ax_tbl = plt.subplots(figsize=(8, fig_height)) # Mierna úprava šírky\n",
+    "# Zväčšili sme šírku na 9, aby sa text neprekrýval\n",
+    "fig_tbl, ax_tbl = plt.subplots(figsize=(9, fig_height)) \n",
     "ax_tbl.axis('tight')\n",
     "ax_tbl.axis('off')\n",
     "\n",
@@ -353,11 +349,11 @@
     "                     loc='center')\n",
     "\n",
     "table.auto_set_font_size(False)\n",
-    "table.set_fontsize(10)\n",
-    "table.scale(1, 1.5)\n",
+    "table.set_fontsize(11)\n",
+    "table.scale(1, 1.8) # Vyššie riadky\n",
     "\n",
     "# Nadpis\n",
-    "plt.title(f\"Analýza centrálnych uzlov (Louvain res={final_res})\", \n",
+    "plt.title(f\"Analýza centrálnych uzlov - Všetky komunity (Louvain res={final_res})\", \n",
     "          y=1.0, pad=20, fontsize=12, fontweight='bold')\n",
     "\n",
     "plt.savefig(\"img/experiment_C_hubs.png\", dpi=300, bbox_inches='tight')\n",
