--- a/detekcia_komunit.ipynb
+++ b/detekcia_komunit.ipynb
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "fc9b726a",
    "metadata": {},
    "outputs": [
@@ -189,9 +189,16 @@
     }
    ],
    "source": [
+    "# ==========================================\n",
+    "# EXPERIMENT B: Analýza veľkosti komunít (Rank-Size)\n",
+    "# ==========================================\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "import collections\n",
+    "import community.community_louvain as community_louvain\n",
+    "import funkcie as fn \n",
+    "\n",
     "# 1. Načítanie modelu z Experimentu A\n",
-    "# Použijeme premennú 'best_resolution', ktorú vypočítal predchádzajúci kód.\n",
-    "# Ak by náhodou neexistovala, nastavíme 1.0 ako fallback.\n",
     "try:\n",
     "    final_res = best_resolution\n",
     "    print(f\"Používam optimalizované resolution z Exp A: {final_res}\")\n",
@@ -218,7 +225,6 @@
     "plt.xlabel(\"Poradie komunity (Rank)\")\n",
     "plt.ylabel(\"Počet členov ($N_c$)\")\n",
     "\n",
-    "# Úprava osi X pre lepšiu čitateľnosť\n",
     "if len(ranks) <= 20:\n",
     "    plt.xticks(ranks)\n",
     "else:\n",
@@ -226,7 +232,6 @@
     "\n",
     "plt.grid(axis='y', linestyle='--', alpha=0.5)\n",
     "\n",
-    "# Pridanie hodnoty nad prvý stĺpec\n",
     "plt.text(ranks[0], sorted_sizes[0], f\" {sorted_sizes[0]}\", ha='center', va='bottom', fontweight='bold')\n",
     "\n",
     "plt.savefig(\"img/experiment_B_sizes_sorted.png\", dpi=300, bbox_inches='tight')\n",
@@ -235,7 +240,6 @@
     "# -------------------------------------------------------\n",
     "# 3. Uloženie TABUĽKY \"Top 5 Komunít\"\n",
     "# -------------------------------------------------------\n",
-    "# Príprava dát: Zoradíme komunity aj s ich ID\n",
     "sorted_comms_with_ids = sorted(community_counts.items(), key=lambda x: x[1], reverse=True)\n",
     "\n",
     "top_5_data = []\n",
@@ -243,19 +247,20 @@
     "\n",
     "for i, (comm_id, size) in enumerate(sorted_comms_with_ids[:5]):\n",
     "    share = (size / total_nodes) * 100\n",
+    "    \n",
+    "    # --- OPRAVA TU ---\n",
+    "    # Odstránil som 'str(comm_id)', teraz sú tu len 3 položky, rovnako ako v 'columns'\n",
     "    top_5_data.append([\n",
     "        str(i + 1),               # Rank\n",
-    "        str(comm_id),             # ID\n",
     "        str(size),                # Size\n",
     "        f\"{share:.1f} %\"          # Share\n",
     "    ])\n",
     "\n",
-    "# Vytvorenie tabuľky\n",
     "fig_tbl, ax_tbl = plt.subplots(figsize=(6, 2.5))\n",
     "ax_tbl.axis('tight')\n",
     "ax_tbl.axis('off')\n",
     "\n",
-    "columns = [\"Rank\", \"Cluster ID\", \"Veľkosť ($N_c$)\", \"Podiel na sieti\"]\n",
+    "columns = [\"Rank\", \"Počet uzlov\", \"Podiel na sieti\"]\n",
     "\n",
     "table = ax_tbl.table(cellText=top_5_data,\n",
     "                     colLabels=columns,\n",
@@ -281,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "8bfd6f7d",
    "metadata": {},
    "outputs": [],
@@ -325,7 +330,7 @@
     "# 3. Vytvorenie tabuľky\n",
     "# Skrátený názov stĺpca pre lepšiu čitateľnosť\n",
     "columns = [\n",
-    "    \"Rank\", \n",
+    "    \"Komunita\", \n",
     "    \"Počet uzlov\", \n",
     "    \"Pokryté uzly\", \n",
     "    \"Pokrytie\"\n",
