--- a/detekcia_komunit.ipynb
+++ b/detekcia_komunit.ipynb
@@ -54,7 +54,7 @@
    "id": "bca2ba21",
    "metadata": {},
    "source": [
-    "#### EXPERIMENT A: Vlpyv hyperparametra resolution na výsledky modelu Louvain"
+    "#### EXPERIMENT A: Vplyv hyperparametra resolution na výsledky modelu Louvain"
    ]
   },
   {
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "fc9b726a",
    "metadata": {},
    "outputs": [
@@ -221,9 +221,9 @@
     "ranks = range(1, len(sorted_sizes) + 1)\n",
     "plt.bar(ranks, sorted_sizes, color='tab:green', edgecolor='black', alpha=0.75)\n",
     "\n",
-    "plt.title(f\"Veľkosť komunít zoradená podľa poradia (Louvain, res={final_res})\")\n",
-    "plt.xlabel(\"Poradie komunity (Rank)\")\n",
-    "plt.ylabel(\"Počet členov ($N_c$)\")\n",
+    "plt.title(f\"Veľkosť komunít (Louvain, res={final_res})\")\n",
+    "plt.xlabel(\"Rank komunít\")\n",
+    "plt.ylabel(\"Počet uzlov\")\n",
     "\n",
     "if len(ranks) <= 20:\n",
     "    plt.xticks(ranks)\n",
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "8bfd6f7d",
    "metadata": {},
    "outputs": [],
